Upgrade project to newer version